[package]
name = "aws-smithy-eventstream"
# <IMPORTANT> Only patch releases can be made to this runtime crate until https://github.com/smithy-lang/smithy-rs/issues/3370 is resolved
version = "0.60.7"
# </IMPORTANT>
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Event stream logic for smithy-rs."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"

[features]
derive-arbitrary = ["arbitrary", "derive_arbitrary"]
test-util = []

[dependencies]
arbitrary = { version = "1.3", optional = true }
aws-smithy-types = { path = "../aws-smithy-types" }
bytes = "1.10.0"
crc32fast = "1.3"
derive_arbitrary = { version = "1.3", optional = true }

[dev-dependencies]
bytes-utils = "0.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
