[package]
name = "aws-smithy-eventstream"
# <IMPORTANT> Only patch releases can be made to this runtime crate until https://github.com/smithy-lang/smithy-rs/issues/3370 is resolved
version = "0.60.17"
# </IMPORTANT>
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Event stream logic for smithy-rs."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
rust-version = "1.91"

[features]
derive-arbitrary = ["dep:arbitrary", "dep:derive_arbitrary", "arbitrary?/derive"]
test-util = []
__bench-jemalloc = []
__bench-mimalloc = []

[dependencies]
arbitrary = { version = "1.3", optional = true }
aws-smithy-types = { path = "../aws-smithy-types", features = ["http-body-1-x"] }
bytes = "1.10.0"
crc32fast = "1.3"
derive_arbitrary = { version = "1.3", optional = true }

[dev-dependencies]
bytes-utils = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
mimalloc = { version = "0.1.43" }

# jemalloc doesn't work on windows, this breaks windows CI
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
jemallocator = { version = "0.5" }

[[bench]]
name = "write_message_performance"
harness = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
