[workspace]
[package]
name = "aws-smithy-fuzz"
version = "0.1.3"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>"]
description = "Fuzzing utilities for smithy-rs servers"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
rust-version = "1.91.1"

[dependencies]
afl = "0.15.10"
arbitrary = { version = "1.3.2", features = ["derive"] }
bincode = "1"
bytes = "1.11.1"
cargo_toml = "0.20.4"
cbor-diag = "0.1.12"
clap = { version = "4.5.15", features = ["derive"] }
ffi-support = "0.4.4"
futures = "0.3.30"
glob = "0.3.1"
homedir = "0.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
lazy_static = "1.5.0"
libloading = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tera = "1.20.0"
termcolor = "1.4.1"
tokio = { version = "1.49.0", features = ["sync", "rt", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
debug = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
