[package]
name = "aws-smithy-http-client"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>"]
description = "HTTP client abstractions for generated smithy clients"
version = "1.0.7"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/smithy-lang/smithy-rs"

[features]
hyper-014 = [
    "aws-smithy-runtime-api/http-02x",
    "aws-smithy-types/http-body-0-4-x",
    "dep:http-02x",
    "dep:http-body-04x",
    "dep:hyper-0-14",
    "dep:h2-0-3"
]

default-client = [
    "aws-smithy-runtime-api/http-1x",
    "aws-smithy-types/http-body-1-x",
    "dep:hyper",
    "dep:hyper-util",
    "hyper-util?/client-legacy",
    "dep:http-1x",
    "dep:tower",
    "dep:rustls-pki-types",
    "dep:rustls-native-certs"
]

wire-mock = [
    "test-util",
    "default-client",
    "hyper-util?/server",
    "hyper-util?/server-auto",
    "hyper-util?/service",
    "hyper-util?/server-graceful",
    "tokio/macros",
    "dep:http-body-util",
]

test-util = [
    "dep:aws-smithy-protocol-test",
    "dep:serde",
    "dep:serde_json",
    "dep:indexmap",
    "dep:bytes",
    # for capture_request
    "dep:http-1x",
    "aws-smithy-runtime-api/http-1x",
    # for dvr
    "dep:http-body-1x",
    "aws-smithy-types/http-body-1-x",
    # for replay
    "tokio/rt"
]

legacy-test-util = [
    "test-util",
    "dep:http-02x",
    "aws-smithy-runtime-api/http-02x",
    "aws-smithy-types/http-body-0-4-x",
]

legacy-rustls-ring = ["dep:legacy-hyper-rustls", "dep:legacy-rustls", "hyper-014"]

rustls-ring = ["dep:rustls", "rustls?/ring", "dep:hyper-rustls", "default-client"]
rustls-aws-lc = ["dep:rustls", "rustls?/aws_lc_rs", "rustls?/prefer-post-quantum", "dep:hyper-rustls", "default-client"]
rustls-aws-lc-fips = ["dep:rustls", "rustls?/fips", "rustls?/prefer-post-quantum", "dep:hyper-rustls", "default-client"]
s2n-tls = ["dep:s2n-tls", "dep:s2n-tls-hyper", "default-client"]

[dependencies]
aws-smithy-async = { path = "../aws-smithy-async" }
aws-smithy-runtime-api = { path = "../aws-smithy-runtime-api", features = ["client"] }
aws-smithy-types = { path = "../aws-smithy-types" }
aws-smithy-protocol-test = { path = "../aws-smithy-protocol-test", optional = true }
h2 = { version = "0.4.2", default-features = false }
tokio = { version = "1.40", features = [] }
pin-project-lite = "0.2.14"
tracing = "0.1.40"

# hyper 1.x stack
hyper = { version = "1.6.0", features = ["client", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.10", features = ["http1", "http2"], optional = true }
http-1x = { package = "http", version = "1" , optional = true }
http-body-1x = { package = "http-body", version = "1", optional = true}
hyper-rustls = { version = "0.27", features = ["http2", "http1", "native-tokio", "tls12"], default-features = false, optional = true }
rustls = { version = "0.23.31", default-features = false, optional = true }
# TODO(hyper1): add a way to enable the fips feature flag in s2n-tls
s2n-tls-hyper = { version = "0.0.4", optional = true }
s2n-tls = { version = "0.3.12", optional = true }
tower = { version = "0.5.2", optional = true }
rustls-pki-types = { version = "1.12.0", features = ["std"], optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
# end hyper 1.x stack deps

# legacy hyper-0.14.x stack the SDK/runtime GA'd with
http-02x = { package = "http", version = "0.2.9", optional = true}
http-body-04x = { package = "http-body", version = "0.4.5" , optional = true}
hyper-0-14 = { package = "hyper", version = "0.14.26", default-features = false, features = ["client", "http1", "http2", "tcp", "stream"], optional = true }
legacy-hyper-rustls = { package = "hyper-rustls", version = "0.24", features = ["rustls-native-certs", "http2"], optional = true }
legacy-rustls = { package = "rustls", version = "0.21.8", optional = true }
h2-0-3 = { package = "h2", version = "0.3.24", optional = true }
# end legacy stack deps

# test util stack
bytes = { version = "1.10.0", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", features = ["preserve_order"], optional = true }
indexmap = { version = "2.6.0", features = ["serde"], optional = true }
http-body-util = { version = "0.1.2", optional = true }
# end test util stack

[dev-dependencies]
aws-smithy-async = { path = "../aws-smithy-async", features = ["rt-tokio", "test-util"] }
aws-smithy-runtime-api = { path = "../aws-smithy-runtime-api", features = ["test-util"] }
aws-smithy-types = { path = "../aws-smithy-types", features = ["http-body-0-4-x", "test-util"] }
http-body-util = { version = "0.1.2" }
hyper-util = { version = "0.1.7", features = ["full"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = { version = "1.12.0", features = ["std"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "test-util", "full"] }
tokio-rustls = "0.26.1"


[[example]]
name = "client-ring"
required-features = ["rustls-ring"]
doc-scrape-examples = true

[[example]]
name = "client-aws-lc"
required-features = ["rustls-aws-lc", "rustls-aws-lc-fips"]
doc-scrape-examples = true

[[example]]
name = "client-s2n-tls"
required-features = ["s2n-tls"]
doc-scrape-examples = true

[[example]]
name = "custom-dns"
required-features = ["rustls-ring"]
doc-scrape-examples = true

[package.metadata.smithy-rs-release-tooling]
stable = true

[package.metadata.docs.rs]
all-features = false
features = [
    "default-client ",
    "wire-mock",
    "test-util",
    "rustls-ring",
    "rustls-aws-lc",
]

targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
