[lib]
proc-macro = true

[package]
name = "aws-smithy-http-server-metrics-macro"
version = "0.1.0"
authors = [
    "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
    "Jason Gin <jasgin@amazon.com>",
]
description = "Server metrics via metrique integration."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
rust-version = "1.88"

[dependencies]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
