[package]
name = "aws-smithy-http-server-metrics"
version = "0.1.1"
authors = [
    "AWS Rust SDK Team <aws-sdk-rust@amazon.com>",
    "Jason Gin <jasgin@amazon.com>",
]
description = "Server metrics via metrique integration."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/smithy-lang/smithy-rs"
rust-version = "1.91"

[dependencies]
aws-smithy-http-server = { path = "../aws-smithy-http-server", features = [
    "request-id",
] }
aws-smithy-http-server-metrics-macro = { path = "../aws-smithy-http-server-metrics-macro" }
http = "1.3.1"
http-body = "1.0.1"
hyper = "1.6.0"
futures = "0.3"
metrique = "0.1.17"
metrique-core = "0.1.15"
metrique-writer = "0.1.17"
pin-project-lite = "0.2.14"
thiserror = "2"
tower = "0.4.13"
tracing = "0.1.44"

# Optional dependencies for aws-smithy-http-server 0.65 support
aws-smithy-http-server-065 = { package = "aws-smithy-http-server", version = "0.65", optional = true, features = [
    "request-id",
] }
http-02 = { package = "http", version = "0.2.12", optional = true }
http-body-04 = { package = "http-body", version = "0.4.6", optional = true }
hyper-014 = { package = "hyper", version = "0.14.26", optional = true }

[dev-dependencies]
tracing-appender = "0.2"
metrique-writer-format-emf = "0.1.16"

[features]
aws-smithy-http-server-065 = [
    "dep:aws-smithy-http-server-065",
    "dep:http-02",
    "dep:hyper-014",
    "dep:http-body-04",
]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
