[package]
name = "aws-smithy-http-server-typescript"
version = "0.0.0-smithy-rs-head"
authors = ["Smithy Rust Server <smithy-rs-server@amazon.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/smithy-rs"
keywords = ["smithy", "framework", "web", "api", "aws"]
categories = ["asynchronous", "web-programming", "api-bindings"]
description = """
Typescript server runtime for Smithy Rust Server Framework.
"""
publish = true

[dependencies]
aws-smithy-http-server = { path = "../aws-smithy-http-server", features = ["aws-lambda", "shared-socket"] }
http = "0.2"
hyper = { version = "0.14", features = ["server", "http2", "tcp"]}
napi = "2.11"
napi-derive = "2.11"
socket2 = "0.4"
tokio = { version = "1.25" }
tower = { version  = "0.4"}

[build-dependencies]
napi-build = "2.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
